--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -1676,5 +1677,6 @@
             <Image url="@../images/Elements/TurnCrown.png" />
          </image>
       </ImageView>
+      <Button fx:id="ENDACTION" layoutX="31.0" layoutY="257.0" mnemonicParsing="false" onAction="#endAction" text="Button" />
    </children>
 </AnchorPane>
