--- a/src/main/resources/fxml/GameCreation.fxml
+++ b/src/main/resources/fxml/GameCreation.fxml
@@ -22,7 +22,7 @@
                 <Insets />
             </opaqueInsets>
          <children>
-                <Button fx:id="continueButton" layoutX="75.0" layoutY="171.0" mnemonicParsing="false" onAction="#generateRoomID" text="Continue" />
+                <Button fx:id="continueButton" layoutX="121.0" layoutY="171.0" mnemonicParsing="false" onAction="#generateRoomID" text="Continue" />
             <CheckBox fx:id="checkPrivate" layoutX="58.0" layoutY="134.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Private game" />
             <CheckBox fx:id="checkExpert" layoutX="58.0" layoutY="98.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Expert  game" />
             <Spinner fx:id="mySpinner" layoutX="59.0" layoutY="54.0" prefHeight="25.0" prefWidth="94.0" />
@@ -33,6 +33,7 @@
                </font>
             </Label>
             <Label fx:id="errorAccessRoom" alignment="CENTER" layoutX="-1.0" layoutY="206.0" prefHeight="17.0" prefWidth="215.0" text="Label" visible="false" />
+            <Button fx:id="backButton" layoutX="27.0" layoutY="171.0" mnemonicParsing="false" onAction="#returnToPreviousScene" prefHeight="25.0" prefWidth="65.0" text="Return" />
          </children>
         </AnchorPane>
     </children>
