--- a/src/main/resources/fxml/JoinGame.fxml
+++ b/src/main/resources/fxml/JoinGame.fxml
@@ -23,8 +23,9 @@
                   <Font size="14.0" />
                </font></Label>
                 <TextField fx:id="roomID" layoutX="33.0" layoutY="77.0" promptText="####" />
-                <Button fx:id="continueButton" layoutX="75.0" layoutY="151.0" mnemonicParsing="false" onAction="#accessChosenRoom" text="Continue" />
-            <Label fx:id="cantAccessRoom" alignment="CENTER" layoutY="110.0" prefHeight="17.0" prefWidth="215.0" text="Could not access room. Try again." textFill="RED" visible="false" />
+                <Button fx:id="continueButton" layoutX="117.0" layoutY="153.0" mnemonicParsing="false" onAction="#accessChosenRoom" text="Continue" />
+            <Label fx:id="cantAccessRoom" alignment="CENTER" layoutY="110.0" prefHeight="32.0" prefWidth="215.0" text="Could not access room. Try again." textFill="RED" visible="false" wrapText="true" />
+            <Button fx:id="backButton" layoutX="28.0" layoutY="153.0" mnemonicParsing="false" onAction="#returnToPreviousScene" prefHeight="25.0" prefWidth="65.0" text="Return" />
             </children>
             <opaqueInsets>
                 <Insets />
