--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -16,7 +16,7 @@
       </ImageView>
       <AnchorPane fx:id="ISLANDS" layoutX="288.0" layoutY="5.0">
          <children>
-            <AnchorPane fx:id="ISLAND_0" layoutX="116.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_0" layoutX="116.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex0" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -100,7 +100,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_1" layoutX="259.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_1" layoutX="259.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex1" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -184,7 +184,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_2" layoutX="395.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_2" layoutX="395.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex2" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -268,7 +268,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_3" layoutX="537.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_3" layoutX="537.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex3" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -352,7 +352,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex4" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -436,7 +436,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_5" layoutX="661.0" layoutY="255.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_5" layoutX="661.0" layoutY="255.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex5" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -520,7 +520,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_6" layoutX="534.0" layoutY="338.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_6" layoutX="534.0" layoutY="338.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex6" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -604,7 +604,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_7" layoutX="391.0" layoutY="374.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_7" layoutX="391.0" layoutY="374.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex7" fitHeight="150.0" fitWidth="150.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -688,7 +688,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_8" layoutX="260.0" layoutY="374.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_8" layoutX="260.0" layoutY="374.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex8" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -772,7 +772,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_9" layoutX="117.0" layoutY="336.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_9" layoutX="117.0" layoutY="336.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex9" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -856,7 +856,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_10" layoutY="254.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_10" layoutY="254.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex10" fitHeight="150.0" fitWidth="150.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -940,7 +940,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_11" layoutX="16.0" layoutY="124.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_11" layoutX="16.0" layoutY="124.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#chooseIsland">
                <children>
                   <ImageView fx:id="islandIndex11" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
