--- a/src/main/resources/fxml/AdversarySchools.fxml
+++ b/src/main/resources/fxml/AdversarySchools.fxml
@@ -17,14 +17,14 @@
             <Image url="@../images/Elements/ButtonPrev.png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="SCHOOL0" layoutX="169.0" layoutY="95.0">
+      <AnchorPane fx:id="SCHOOL0" layoutX="123.0" layoutY="95.0">
          <children>
-            <ImageView fx:id="SCHOOL_0" fitHeight="220.0" fitWidth="455.0" layoutX="40.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="SCHOOL_0" fitHeight="220.0" fitWidth="455.0" layoutX="86.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/AdversarySchool.png" />
                </image>
             </ImageView>
-            <AnchorPane fx:id="DR_0" layoutX="124.0" layoutY="87.0">
+            <AnchorPane fx:id="DR_0" layoutX="170.0" layoutY="87.0">
                <children>
                   <AnchorPane fx:id="DR_GREEN_0">
                      <children>
@@ -298,7 +298,7 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="PROFESSORS_0" layoutX="341.0" layoutY="87.0" prefHeight="148.0" prefWidth="20.0">
+            <AnchorPane fx:id="PROFESSORS_0" layoutX="387.0" layoutY="87.0" prefHeight="148.0" prefWidth="20.0">
                <children>
                   <ImageView fx:id="BLUE_0" fitHeight="20.0" fitWidth="20.0" layoutX="20.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true" rotate="90.0" visible="false">
                      <image>
@@ -327,7 +327,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="TOWERS_0" layoutX="401.0" layoutY="87.0">
+            <AnchorPane fx:id="TOWERS_0" layoutX="447.0" layoutY="87.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="35.0" pickOnBounds="true" preserveRatio="true" />
@@ -339,7 +339,7 @@
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="35.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ENTRANCE_0" layoutX="47.0" layoutY="83.0">
+            <AnchorPane fx:id="ENTRANCE_0" layoutX="93.0" layoutY="83.0">
                <children>
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="28.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true" />
@@ -352,28 +352,33 @@
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
-            <Label fx:id="USERNAME_0" alignment="CENTER" layoutX="397.0" layoutY="57.0" prefHeight="17.0" prefWidth="69.0" text="Label" visible="false" />
-            <ImageView fx:id="TURN_0" fitHeight="50.0" fitWidth="50.0" layoutX="407.0" pickOnBounds="true" preserveRatio="true" visible="false">
+            <Label fx:id="USERNAME_0" alignment="CENTER" layoutX="443.0" layoutY="57.0" prefHeight="17.0" prefWidth="69.0" text="Label" visible="false" />
+            <ImageView fx:id="TURN_0" fitHeight="50.0" fitWidth="50.0" layoutX="453.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../images/Elements/TurnCrown.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="COIN_0" fitHeight="40.0" fitWidth="40.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="COIN_0" fitHeight="40.0" fitWidth="40.0" layoutX="40.0" layoutY="217.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/Coin.png" />
                </image>
             </ImageView>
-            <Label fx:id="COINNUM_0" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="202.0" text="Label" />
+            <Label fx:id="COINNUM_0" alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="198.0" text="Label" />
+            <ImageView fx:id="ACPLAYED_0" fitHeight="150.0" fitWidth="80.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../images/Elements/Assistente1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="SCHOOL1" layoutX="169.0" layoutY="367.0">
+      <AnchorPane fx:id="SCHOOL1" layoutX="123.0" layoutY="367.0">
          <children>
-            <ImageView fx:id="SCHOOL_1" fitHeight="220.0" fitWidth="455.0" layoutX="40.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="SCHOOL_1" fitHeight="220.0" fitWidth="455.0" layoutX="86.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/AdversarySchool.png" />
                </image>
             </ImageView>
-            <AnchorPane fx:id="DR_1" layoutX="124.0" layoutY="89.0">
+            <AnchorPane fx:id="DR_1" layoutX="170.0" layoutY="89.0">
                <children>
                   <AnchorPane fx:id="DR_GREEN_01">
                      <children>
@@ -647,7 +652,7 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="PROFESSORS_1" layoutX="341.0" layoutY="89.0" prefHeight="148.0" prefWidth="20.0">
+            <AnchorPane fx:id="PROFESSORS_1" layoutX="387.0" layoutY="89.0" prefHeight="148.0" prefWidth="20.0">
                <children>
                   <ImageView fx:id="BLUE_1" fitHeight="20.0" fitWidth="20.0" layoutX="20.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true" rotate="90.0" visible="false">
                      <image>
@@ -676,7 +681,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="TOWERS_1" layoutX="401.0" layoutY="89.0">
+            <AnchorPane fx:id="TOWERS_1" layoutX="447.0" layoutY="89.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="35.0" pickOnBounds="true" preserveRatio="true" />
@@ -688,7 +693,7 @@
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="35.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ENTRANCE_1" layoutX="47.0" layoutY="85.0">
+            <AnchorPane fx:id="ENTRANCE_1" layoutX="93.0" layoutY="85.0">
                <children>
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="28.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true" />
@@ -701,18 +706,23 @@
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
-            <Label fx:id="USERNAME_1" alignment="CENTER" layoutX="397.0" layoutY="59.0" prefHeight="17.0" prefWidth="69.0" text="Label" visible="false" />
-            <ImageView fx:id="TURN_1" fitHeight="50.0" fitWidth="50.0" layoutX="408.0" pickOnBounds="true" preserveRatio="true" visible="false">
+            <Label fx:id="USERNAME_1" alignment="CENTER" layoutX="443.0" layoutY="59.0" prefHeight="17.0" prefWidth="69.0" text="Label" visible="false" />
+            <ImageView fx:id="TURN_1" fitHeight="50.0" fitWidth="50.0" layoutX="454.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../images/Elements/TurnCrown.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="COIN_1" fitHeight="40.0" fitWidth="40.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="COIN_1" fitHeight="40.0" fitWidth="40.0" layoutX="40.0" layoutY="217.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/Coin.png" />
                </image>
             </ImageView>
-            <Label fx:id="COINNUM_1" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="205.0" text="Label" />
+            <Label fx:id="COINNUM_1" alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="199.0" text="Label" />
+            <ImageView fx:id="ACPLAYED_1" fitHeight="150.0" fitWidth="80.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../images/Elements/Assistente1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="SCHOOL2" layoutX="703.0" layoutY="95.0">
@@ -1056,12 +1066,17 @@
                   <Image url="@../images/Elements/TurnCrown.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="COIN_2" fitHeight="40.0" fitWidth="40.0" layoutX="455.0" layoutY="219.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="COIN_2" fitHeight="40.0" fitWidth="40.0" layoutX="461.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/Coin.png" />
                </image>
             </ImageView>
-            <Label fx:id="COINNUM_2" alignment="CENTER" contentDisplay="CENTER" layoutX="461.0" layoutY="202.0" text="Label" />
+            <Label fx:id="COINNUM_2" alignment="CENTER" contentDisplay="CENTER" layoutX="467.0" layoutY="198.0" text="Label" />
+            <ImageView fx:id="ACPLAYED_2" fitHeight="150.0" fitWidth="80.0" layoutX="461.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../images/Elements/Assistente1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="SCHOOL3" layoutX="703.0" layoutY="367.0">
@@ -1393,12 +1408,17 @@
                   <Image url="@../images/Elements/TurnCrown.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="COIN_3" fitHeight="40.0" fitWidth="40.0" layoutX="455.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="COIN_3" fitHeight="40.0" fitWidth="40.0" layoutX="461.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Elements/Coin.png" />
                </image>
             </ImageView>
-            <Label fx:id="COINNUM_3" alignment="CENTER" contentDisplay="CENTER" layoutX="461.0" layoutY="205.0" text="Label" />
+            <Label fx:id="COINNUM_3" alignment="CENTER" contentDisplay="CENTER" layoutX="467.0" layoutY="201.0" text="Label" />
+            <ImageView fx:id="ACPLAYED_3" fitHeight="150.0" fitWidth="80.0" layoutX="461.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../images/Elements/Assistente1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
