--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -1677,6 +1677,6 @@
             <Image url="@../images/Elements/TurnCrown.png" />
          </image>
       </ImageView>
-      <Button fx:id="ENDACTION" layoutX="31.0" layoutY="257.0" mnemonicParsing="false" onAction="#endAction" text="End Selection" visible="false"/>
+      <Button fx:id="ENDACTION" layoutX="31.0" layoutY="257.0" mnemonicParsing="false" onAction="#endAction" text="End Selection" />
    </children>
 </AnchorPane>
