fixed EndGame call logic and updated its controller

--- a/src/main/resources/fxml/EndGame.fxml
+++ b/src/main/resources/fxml/EndGame.fxml
@@ -7,15 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.gui.controller.EndGameController">
    <children>
-      <ImageView fitHeight="768.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="BG" fitHeight="768.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Elements/EndGameBg.png" />
          </image>
       </ImageView>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="353.0" layoutY="376.0" prefHeight="163.0" prefWidth="651.0" text="Label" textAlignment="CENTER" wrapText="true">
+      <Label fx:id="WINNERS" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="353.0" layoutY="376.0" prefHeight="163.0" prefWidth="651.0" text="Label" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="24.0" />
          </font>
