--- a/src/main/resources/fxml/Disconnected.fxml
+++ b/src/main/resources/fxml/Disconnected.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.gui.controller.DisconnectedController">
 <children>
     <ImageView fitHeight="768.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true">
@@ -15,9 +14,9 @@
             <Image url="@../images/Elements/EndGameBg.png" />
         </image>
     </ImageView>
-    <Label fx:id="MESSAGES" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="531.0" layoutY="300.0" prefHeight="62.0" prefWidth="200.0" text="A player disconnected" textAlignment="CENTER" textFill="BLACK" wrapText="true">
+    <Label fx:id="MESSAGES" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="583.0" layoutY="341.0" prefHeight="39.0" prefWidth="200.0" text="A player disconnected" textAlignment="CENTER" textFill="BLACK" wrapText="true">
         <font>
-            <Font name="Segue UI Italic" size="14.0" />
+            <Font name="Segoe UI Black" size="14.0" />
         </font>
     </Label>
     <Button layoutX="531.0" layoutY="410.0" mnemonicParsing="false" onAction="#returnToLobby" text="Return to lobby" />
